--- a/thought_landingpage/style.css
+++ b/thought_landingpage/style.css
@@ -1,11 +1,19 @@
+body {
+    padding: 0px 20px;
+}
+
 .header {
     display: flex;
-    width: auto;
+    width: 100%;
     height: 100px;
     justify-content: space-around;
     align-items: center;
     gap: 80px;
-    
+    position: sticky;
+    top: 0px;
+    background-color: rgb(255, 255, 255, 0.975);   
+    margin-bottom: 200px;
+    z-index: 5;
 }
 
 .logo {
@@ -22,7 +30,7 @@
     font-weight: 700;
 }
 
-img {
+.header img {
     width: 60px;
     height: auto;
 }
@@ -41,4 +49,85 @@ button {
     border-style: none;
     color: white;
     font-size: 15px;
+}
+
+.content1 {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    border: 2px solid green;
+}
+
+.content1 .text {
+    width: 50%;
+    padding-left: 65px;
+    border: 2px solid yellow;
+}
+
+.content1 .image {
+    width: 50%;
+    border: 2px solid orangered;
+    padding-left: 10px;
+}
+
+.image::after {
+    content: ' ';
+    display: table;
+    clear: both;
+}
+
+.stimage {
+   float: left;
+   width: 30%;
+   position: relative;
+   z-index: 4;
+   top: 5%;
+   margin-right: -100%;
+}
+
+.ndimage {
+    float: right;
+    width: 60%;
+    padding: 5%;
+    z-index: 3;
+}
+
+.rdimage {
+    clear: right;
+    position: relative;
+    bottom: 15%;
+    left: 30%;
+    z-index: -1;
+}
+
+.pad-up {
+    padding-left: 65px;
+}
+
+.content2 img, .content3 img {
+    height: auto;
+    width: 550px;
+}
+
+.content2, .content3 {
+    display: flex;
+    width: 100%;
+    border: 3px solid magenta;
+}
+
+.content2 {
+    margin-bottom: 20px;
+}
+
+.content3 {
+    margin-bottom: 150px;
+}
+
+.st-content2, .nd-content2, .st-content3, .nd-content3 {
+    width: 50%;
+    border: 3px solid peachpuff;
+}
+
+.st-content2, .st-content3 {
+    padding-left: 65px;
 }
