--- a/thought_landingpage/style.css
+++ b/thought_landingpage/style.css
@@ -109,7 +109,7 @@ button {
     width: 550px;
 }
 
-.content2, .content3 {
+.content2, .content3, .content5 {
     display: flex;
     width: 100%;
     border: 3px solid magenta;
@@ -128,6 +128,56 @@ button {
     border: 3px solid peachpuff;
 }
 
-.st-content2, .st-content3 {
+.st-content2, .st-content3, .st-content4, .st-content5 {
     padding-left: 65px;
+}
+
+.content4 {
+    display: flex;
+}
+
+.st-content4 {
+    width: 67%;
+}
+
+.nd-content4 {
+    width: 33%;
+}
+
+.st-content5, .nd-content5 {
+    width: 50%;
+    border: 3px solid peachpuff;
+}
+
+.st-content5::after {
+    display: table;
+    content: " ";
+    clear: both;
+}
+
+.fourth {
+    float: left;
+    margin-right: -100%;
+    position: relative;
+    top: 15px;
+    left: 10px;
+    width: 30%;
+    z-index: 3;
+}
+
+.fifth {
+    float: right;
+    position: relative;
+    top: 0%;
+    right: 15%;
+    z-index: 2;
+}
+
+.sixth {
+    clear: both;
+    position: relative;
+    bottom: 5%;
+    left: 20%;
+    z-index: -1;
+
 }
