--- a/thought_landingpage/style.css
+++ b/thought_landingpage/style.css
@@ -70,7 +70,7 @@ button {
     padding-left: 10px;
 }
 
-.image::after {
+.image::after, .st-content5::after, .nd-content6::after, .nd-content7::after {
     content: ' ';
     display: table;
     clear: both;
@@ -109,10 +109,11 @@ button {
     width: 550px;
 }
 
-.content2, .content3, .content5 {
+.content2, .content3, .content5, .content6, .content7 {
     display: flex;
     width: 100%;
     border: 3px solid magenta;
+    padding-left: 65px;
 }
 
 .content2 {
@@ -123,17 +124,15 @@ button {
     margin-bottom: 150px;
 }
 
-.st-content2, .nd-content2, .st-content3, .nd-content3 {
+.st-content2, .nd-content2, .st-content3, .nd-content3, .st-content5, .nd-content5,
+ .st-content6, .nd-content6 {
     width: 50%;
     border: 3px solid peachpuff;
 }
 
-.st-content2, .st-content3, .st-content4, .st-content5 {
-    padding-left: 65px;
-}
-
 .content4 {
     display: flex;
+    padding-left: 65px;
 }
 
 .st-content4 {
@@ -142,17 +141,6 @@ button {
 
 .nd-content4 {
     width: 33%;
-}
-
-.st-content5, .nd-content5 {
-    width: 50%;
-    border: 3px solid peachpuff;
-}
-
-.st-content5::after {
-    display: table;
-    content: " ";
-    clear: both;
 }
 
 .fourth {
@@ -179,5 +167,106 @@ button {
     bottom: 5%;
     left: 20%;
     z-index: -1;
+}
 
+.quotediv {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 250px;
+    background-color: rgb(241, 241, 241);
+    padding: 50px 50px 100px 50px;
+    margin-bottom: 100px;
+}
+
+.inquote {
+    display: flex;
+    width: 100%;
+
+}
+
+.inquote img {
+    border-radius: 50%;
+}
+
+.avatar {
+    display: flex;
+    width: 70%;
+    gap: 20px;
+}
+
+.link-inquote {
+    position: relative;
+    top: 60%;
+    right: 0%;
+}
+
+.content6 {
+    margin-bottom: 250px;
+}
+
+.seventh {
+    float: left;
+    margin-right: -100%;
+    position: relative;
+    top: -5%;
+    left: 20%;
+    z-index: -1;
+}
+
+.eighth {
+    float: right;
+    position: relative;
+    top: 45%;
+    right: 20%;
+    z-index: 3;
+}
+
+.ninth {
+    float: left;
+    position: relative;
+    top: 40%;
+    left: 5%;
+    z-index: 2;
+}
+
+.tenth {
+    float: left;
+    margin-bottom: -100%;
+    margin-right: -100%;
+    position: relative;
+    z-index: 3;
+    top: -15%;
+    left: 50px;
+}
+
+.eleventh {
+    float: left;
+    position: relative;
+    top: 50%;
+    left: 0%;
+    z-index: 2;
+}
+
+.twelfth {
+    float: right;
+    position: relative;
+    top: 10%;
+    right: 35%;
+}
+
+.st-content7 {
+    width: 55%;
+}
+
+.nd-content7 {
+    width: 45%;
+}
+
+.content8 {
+    display: flex;
+}
+
+.st-content8, .nd-content8, .rd-content8 {
+    width: 33%;
 }
